Test box updated

--- a/Platformer_Project/Platformer_Project.csproj
+++ b/Platformer_Project/Platformer_Project.csproj
@@ -95,7 +95,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\TestBlock.png" />
+    <Folder Include="Assets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
