--- a/Platformer_Project/Platformer_Project.csproj
+++ b/Platformer_Project/Platformer_Project.csproj
@@ -59,11 +59,21 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Class1.cs" />
+    <Compile Include="Class2.cs" />
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Window2.xaml.cs">
       <DependentUpon>Window2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window3.xaml.cs">
+      <DependentUpon>Window3.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window4.xaml.cs">
+      <DependentUpon>Window4.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window5.xaml.cs">
+      <DependentUpon>Window5.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -82,6 +92,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Window2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window3.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window4.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window5.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -113,7 +135,73 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Assets\" />
+    <None Include="Assets\Music\Level\Neon_Prison.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="StartMenu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SelectBGv3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L1Button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L2Button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L3Button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="LevelBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L1-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L1-2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L1-3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L1-4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SpriteV5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L2-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L2-2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L2-3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L2-4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L2-5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L3-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L3-2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L3-3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L3-4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="L3-5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Music\Menu\A_City_Without_Sleep.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
