--- a/Platformer_Project/Platformer_Project.csproj
+++ b/Platformer_Project/Platformer_Project.csproj
@@ -61,6 +61,11 @@
     </ApplicationDefinition>
     <Compile Include="Class1.cs" />
     <Compile Include="Class2.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
@@ -112,11 +117,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -217,7 +217,10 @@
     <Resource Include="Assets\Character\Dash1.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\Character\SpriteV5.png" />
+    <None Include="Assets\Character\SpriteLeft.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Character\SpriteRight.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
